# edgeai-dx_visionpipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: pipeline.yaml
scripts/: check_rtsp.sh  publish_test_rtsp.sh  publish_webcam_rtsp.sh  stack.sh
src/vision_pipeline/: __init__.py  api.py  cli.py  config.py  db.py  detectors.py  embeddings.py  models.py  pipeline.py  vlm.py
src/vision_pipeline/static/: app.js  index.html  styles.css
tests/: test_api.py  test_cli.py  test_pipeline.py  test_store.py  test_vlm.py
